# fast_matching_python

./: .gitignore  Readme.md  cat1.off  test.py
fast_marching/: CMakeLists.txt  fm_module.cpp
fast_marching/include/: calc_geodesics.h  che.h  che_off.h  geodesics.h  include.h  vertex.h
fast_marching/src/: calc_geodesics.cpp  che.cpp  che_off.cpp  geodesics.cpp  vertex.cpp
